--- a/src/css/main.css
+++ b/src/css/main.css
@@ -3,19 +3,26 @@
     flex-direction: column;
     height: 100vh;
     width: 100vw;
-    background-color: white;
 }
 
-input, label {
-    margin-left: auto;
-    margin-right: auto;
-    width: 120px;
+.wrapper{
+    max-width: 150px;
+    margin: auto;
 }
 
-input {
-    margin-bottom: auto;
+input{
+    padding: 5px;
+    max-width: 150px;
 }
 
-label {
-    margin-top: auto;
+input:focus{
+    border: 3px solid blue;
+}
+
+.display-color{
+    margin-top: 5px;
+}
+
+input, .display-color{
+    height: 40px;
 }
